# StratifyAlpha

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  StratifyKernelSettings.json  StratifyLocalSettings.json  StratifySettings.json  config.h  sl_settings.json
boot/: board_config.h  boot_board_config.c  link_transport.c  link_transport.h
build_debug/: makefile  objects.mk
build_debug/src/: subdir.mk
build_debug_boot/: makefile  objects.mk
build_debug_boot/boot/: subdir.mk
build_release/: makefile  objects.mk
build_release/src/: subdir.mk
build_release_boot/: makefile  objects.mk
build_release_boot/boot/: subdir.mk
src/: board_config.c  board_trace.c  link_transport.c  link_transport.h  sl_config.h
